@@ -32,7 +32,7 @@ import org.springframework.test.context.ContextLoader;
 import org.springframework.test.context.MergedContextConfiguration;
 import org.springframework.test.context.SmartContextLoader;
 import org.springframework.test.context.aot.AotContextLoader;
-import org.springframework.test.context.aot.AotTestMappings;
+import org.springframework.test.context.aot.TestAotMappings;
 import org.springframework.test.context.aot.TestContextAotException;
 import org.springframework.util.Assert;
 
@@ -56,7 +56,8 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 	 */
 	static final ContextCache defaultContextCache = new DefaultContextCache();
 
-	private final AotTestMappings aotTestMappings = getAotTestMappings();
+	@Nullable
+	private final TestAotMappings testAotMappings = getTestAotMappings();
 
 	private final ContextCache contextCache;
 
@@ -104,18 +105,19 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 						context = loadContextInternal(mergedContextConfiguration);
 					}
 					if (logger.isDebugEnabled()) {
-						logger.debug(String.format("Storing ApplicationContext [%s] in cache under key [%s]",
+						logger.debug("Storing ApplicationContext [%s] in cache under key %s".formatted(
 								System.identityHashCode(context), mergedContextConfiguration));
 					}
 					this.contextCache.put(mergedContextConfiguration, context);
 				}
 				catch (Exception ex) {
-					throw new IllegalStateException("Failed to load ApplicationContext", ex);
+					throw new IllegalStateException(
+						"Failed to load ApplicationContext for " + mergedContextConfiguration, ex);
 				}
 			}
 			else {
 				if (logger.isDebugEnabled()) {
-					logger.debug(String.format("Retrieved ApplicationContext [%s] from cache with key [%s]",
+					logger.debug("Retrieved ApplicationContext [%s] from cache with key %s".formatted(
 							System.identityHashCode(context), mergedContextConfiguration));
 				}
 			}
@@ -149,17 +151,16 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 	protected ApplicationContext loadContextInternal(MergedContextConfiguration mergedContextConfiguration)
 			throws Exception {
 
-		ContextLoader contextLoader = mergedContextConfiguration.getContextLoader();
-		Assert.notNull(contextLoader, "Cannot load an ApplicationContext with a NULL 'contextLoader'. " +
-				"Consider annotating your test class with @ContextConfiguration or @ContextHierarchy.");
-
+		ContextLoader contextLoader = getContextLoader(mergedContextConfiguration);
 		if (contextLoader instanceof SmartContextLoader smartContextLoader) {
 			return smartContextLoader.loadContext(mergedContextConfiguration);
 		}
 		else {
 			String[] locations = mergedContextConfiguration.getLocations();
-			Assert.notNull(locations, "Cannot load an ApplicationContext with a NULL 'locations' array. " +
-					"Consider annotating your test class with @ContextConfiguration or @ContextHierarchy.");
+			Assert.notNull(locations, """
+					Cannot load an ApplicationContext with a NULL 'locations' array. \
+					Consider annotating test class [%s] with @ContextConfiguration or \
+					@ContextHierarchy.""".formatted(mergedContextConfiguration.getTestClass().getName()));
 			return contextLoader.loadContext(locations);
 		}
 	}
@@ -167,12 +168,12 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 	protected ApplicationContext loadContextInAotMode(MergedContextConfiguration mergedConfig) throws Exception {
 		Class<?> testClass = mergedConfig.getTestClass();
 		ApplicationContextInitializer<ConfigurableApplicationContext> contextInitializer =
-				this.aotTestMappings.getContextInitializer(testClass);
+				this.testAotMappings.getContextInitializer(testClass);
 		Assert.state(contextInitializer != null,
 				() -> "Failed to load AOT ApplicationContextInitializer for test class [%s]"
 						.formatted(testClass.getName()));
+		ContextLoader contextLoader = getContextLoader(mergedConfig);
 		logger.info(LogMessage.format("Loading ApplicationContext in AOT mode for %s", mergedConfig));
-		ContextLoader contextLoader = mergedConfig.getContextLoader();
 		if (!((contextLoader instanceof AotContextLoader aotContextLoader) &&
 				(aotContextLoader.loadContextForAotRuntime(mergedConfig, contextInitializer)
 						instanceof GenericApplicationContext gac))) {
@@ -186,20 +187,30 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 		return gac;
 	}
 
+	private ContextLoader getContextLoader(MergedContextConfiguration mergedConfig) {
+		ContextLoader contextLoader = mergedConfig.getContextLoader();
+		Assert.notNull(contextLoader, """
+				Cannot load an ApplicationContext with a NULL 'contextLoader'. \
+				Consider annotating test class [%s] with @ContextConfiguration or \
+				@ContextHierarchy.""".formatted(mergedConfig.getTestClass().getName()));
+		return contextLoader;
+	}
+
 	/**
 	 * Determine if we are running in AOT mode for the supplied test class.
 	 */
 	private boolean runningInAotMode(Class<?> testClass) {
-		return (this.aotTestMappings != null && this.aotTestMappings.isSupportedTestClass(testClass));
+		return (this.testAotMappings != null && this.testAotMappings.isSupportedTestClass(testClass));
 	}
 
-	private static AotTestMappings getAotTestMappings() {
+	@Nullable
+	private static TestAotMappings getTestAotMappings() {
 		if (AotDetector.useGeneratedArtifacts()) {
 			try {
-				return new AotTestMappings();
+				return new TestAotMappings();
 			}
 			catch (Exception ex) {
-				throw new IllegalStateException("Failed to instantiate AotTestMappings", ex);
+				throw new IllegalStateException("Failed to instantiate TestAotMappings", ex);
 			}
 		}
 		return null;
